v3.0.1.1-SNAPSHOT - Cyclic materials support in KamiMenuContainer